# YadroTestTask

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.txt
Tests/: CMakeLists.txt  SorterTests.cpp  TapeTests.cpp
include/Tape/: ITape.h  TapeHandler.h  TapeSettings.h
include/TapeSorter/: TapeSorter.h
sources/: CMakeLists.txt  main.cpp
sources/Tape/: CMakeLists.txt  TapeHandler.cpp
sources/TapeSorter/: CMakeLists.txt  TapeSorter.cpp
